--- a/style.css
+++ b/style.css
@@ -1,9 +1,24 @@
-p {
-    color: red;
+/* Ordered Lists Style */
+ol {
+    color: rgb(0, 183, 255);
+    font-size: 1.2em;
+}
+
+/* Unordered Lists Style */
+
+ul {
+    color: blueviolet
+    font-size: 1.2em;
 }
 
 /* Header 1 color */
 h1
 {
-    color: #FF0000;
+    color: hsl(0,100%,25%);
 }
+
+html {
+    background-color: #cccccc;
+    font-size: 20px
+}
+
