--- a/style.css
+++ b/style.css
@@ -29,12 +29,18 @@ h1
     text-decoration:coral;
     margin-top: 1cm;
     margin-bottom: -0.1mm;
+    font-family: "Roboto-Medium.ttf";
+}
+
+@font-face {
+    font-family: "Roboto-Medium.ttf";
+    src: url(Roboto/Roboto-Medium.ttf);
 }
 
 /* Header 2 */
 h2
 {
-
+    font-family: "Roboto-Medium.ttf";
     margin: auto;
     text-align: center;
     padding-top:20mm;
@@ -92,6 +98,8 @@ video {
     width:150mm;
 
     position:sticky;
+    display: flex; /* or inline-flex */
+    
 
 }
 
@@ -102,4 +110,11 @@ button:hover {
 button:active {
     color: white;
     background-color: green;
+}
+
+@media only screen and (max-width: 600px) {
+    body {
+      background-color: rgb(173, 230, 173);
+    }
   }
+
